# Command

./: .gitignore  README.MD
C/: gcchack.sh  hack  hack.c  hack.txt  virtualmachine.c
C#/wpf/WPF/: WPF.sln
C&C++/OS/: cpu  cpu.c
C&C++/algorithm/: CMakeLists.txt  algorithm.cpp
C&C++/compiler/: CMakeLists.txt  sytanx_an.y
C&C++/dataStructure/: gameEngine.cpp
C&C++/database/: CMakeLists.txt  database.cpp
C&C++/demo1/: CMakeLists.txt  demo1.c  test.c
C&C++/demo2/: demo2.cpp  demo2.h
C&C++/game/: CMakeLists.txt  game.cpp
C&C++/game/linux/: CMakeCache.txt  cmake_install.cmake  game
C&C++/gameAITest/: BaseGameEntity.cpp  Miner.cpp  gameAITest.cbp
C&C++/gameEngine/: CMakeLists.txt  gameEngine.cpp  graphicsAPI.cpp  shader.frag  shader.vert
C&C++/network/: CMakeLists.txt  network.cpp
C&C++/qt/: CMakeLists.txt  CMakeLists.txt.user.b5c03df  CMakeUserPresets.json  desktop.ini  main.cpp  mygame.cpp  qtgame.ui
C&C++/system/: CMakeLists.txt  system.cpp
C&C++/theory/: CMakeLists.txt  theory.cpp
C++/C/: main.c  primerC.cbp  primerC.depend  primerC.exe.stackdump
C++/algorithm/: algorithm.cpp
C++/compiler/: CMakeLists.txt  compiler.cpp  lex.yy.c  lexer.l  parser.y  sytanx_an.tab.c  sytanx_an.tab.h  sytanx_an.y  word_an.l
C++/database/: database.cpp
C++/game/: game.cpp
C++/game/linux/: Makefile
C++/gameAITest/: State.cpp  gameAITest.layout
C++/gameEngine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  graphicsAPI.cpp  shader.frag  shader.vert
C++/git/: git.cpp
C++/network/: CMakeLists.txt
C++/qt/: qtgame.cpp  qtgame.h
C++/system/: CMakeLists.txt  build.sh  interrupts.S  kernel.c  kernel.elf  linker.ld  start.S  start.sh  testlinux.asm  testwin.asm
C++/theory/: theory.c
Rust/: test1
Rust/cargotest/: Cargo.toml
Rust/cargotest/src/: main.rs
ass/: bootloader.asm  test.asm
ass/riscv/: hello  hello.s
ass/x86/: hello.s
bash/: fwatchgod-lite.sh
coq/: #peano.v#  hano.v  peano.v
flutter/appflowy/: README.md  pubspec.yaml
flutter/appflowy/lib/: main.dart
flutter/appflowy/linux/: CMakeLists.txt  my_application.cc
flutter/appflowy/test/: widget_test.dart
flutter/appflowy/web/: index.html  manifest.json
flutter/appflowy/windows/: CMakeLists.txt
flutter/my_app/: .flutter-plugins  .flutter-plugins-dependencies  .metadata  pubspec.yaml
flutter/my_app/android/: key.properties  local.properties  upload-keystore.jks
flutter/myapp/: .metadata  pubspec.yaml
flutter/myapp/linux/: CMakeLists.txt
game/godotTest/: Icon.gd  Label.gd  default_env.tres  icon.png.import  project.godot  test.gd  test.tscn  test2.tscn
golang/fyne/: go.mod  go.sum
kotlin/: settings.gradle.kts
kotlin/Activity/: build.gradle.kts  settings.gradle.kts
kotlin/Activity/app/: build.gradle.kts
kotlin/Activity/gradle/: libs.versions.toml
kotlin/AndroidTest/: settings.gradle
kotlin/AndroidTest/app/: build.gradle
kotlin/Graphics/: settings.gradle.kts
kotlin/Graphics/app/: build.gradle.kts
kotlin/Vulkan/: build.gradle.kts  settings.gradle.kts
kotlin/Vulkan/app/: build.gradle.kts
kotlin/Vulkan/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
kotlin/Vulkan/gradle/: libs.versions.toml
kotlin/app/: build.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
ngspice/: logic_gate.spice  test_gate.spice
praat/: consonants.praat  downloaddj.py  downloadipa.py  vowel.praat
praat/click/: con-58b.aiff  con-61b.aiff  con-62b.aiff  con-63b.aiff  con-64b.aiff  con-65b.aiff  con-67b.aiff  con-68a.aiff  con-70b.aiff  con-71a.aiff  con-71b.aiff
praat/consonants/: con-04b.aiff  con-05a.aiff  con-06b.aiff  con-10b.aiff  con-12b.aiff  con-14b.aiff  con-17b.aiff  con-21b.aiff  con-22b.aiff  con-23b.aiff  con-24b.aiff  con-25b.aiff  con-26b.aiff  con-27b.aiff  con-32b.aiff  con-38b.aiff  con-41b.aiff  con-43b.aiff  con-55b.aiff  con-57b.aiff
praat/ipa/click/: con-59b.aiff  con-66b.aiff  con-68b.aiff  con-69a.aiff  con-69b.aiff
praat/ipa/consonants/: con-01a.aiff  con-03a.aiff  con-07b.aiff  con-20b.aiff  con-29b.aiff  con-37b.aiff  con-44b.aiff  con-51b.aiff  con-53b.aiff  con-56b.aiff
praat/ipa/others/: con-72a.aiff  con-73a.aiff  con-74a.aiff  con-75b.aiff  con-77b.aiff  con-78a.aiff  con-78b.aiff  con-82a.aiff
praat/others/: con-75a.aiff  con-76b.aiff  con-77a.aiff  con-79a.aiff  con-81a.aiff  con-81b.aiff
praat/standard/click/: con-60b.aiff  con-70a.aiff
praat/standard/consonants/: con-16b.aiff  con-19b.aiff  con-30b.aiff  con-46b.aiff  con-47b.aiff  con-52b.aiff
praat/standard/others/: con-72b.aiff  con-73b.aiff  con-74b.aiff  con-76a.aiff  con-79b.aiff  con-80a.aiff  con-80b.aiff  con-82b.aiff
primer/ConsoleApplication1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
primer/ConsoleApplication1/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc142.idb  (+1 more)
python/: Untitled.ipynb
python/Science/: Astro.py  Bio.py  Engineer.py  Math.py  War.py  botany.py  chemi.py  pysics.py
python/browser/: browser.py
python/dataan/: economic.py  history.py  law.py  management.py  philosopy.py  psy.py  research.py  social.py  trade.py
python/github/: Pipfile  codecomplete.py
python/loltra/: main.py  test.html
python/network/: ns3.py
python/nlp/: grammar.py  main.py  morphology.py  social.py  syntax.py  word.py
python/pc/: googleplay.py  sina.py
python/rgzn/: FileManager.py  Zelda1.py  aitest.py  gymDerk.py  gymchess.py  gymspacewar.py  llm.py  main.py  main_improved.py  minigrid.py  providers.py  providers_improved.py  pysc2.py  quick_test.py  test_improved.py  tts.py  tts_improved.py  使用文档.md  改进总结.md  改进计划.md
python/robot/: agent_core.py  provider.py
python/rpa/: filemanage.py
python/studytest/: main.py  otherstudy.py
python/temp/: main.py
python/test/: Selenium.py
test/robot-framework/: log.html  output.xml  report.html  testsuit.robot
verilog/: 32bit_full_adder_test.v  32bit_fulladder.v  full_adder.v  half_adder.v  test  test.v
wdc/: test1.c
(+128 files in other folders)
